--- a/index.html
+++ b/index.html
@@ -77,9 +77,12 @@
 
 
     <div class="project2">
-        <h4>New Project</h4>
-        <h5>May 2021 - June 2021</h5>
-        <p>...</p>
+        <h4>Distribution Network</h4>
+        <h5>Oct 2019 - Oct 2019</h5>
+        <p>Extension of a problem from an university class.</p>
+        <p>The optimization problem aims to find the minimum costs for sending products through a distribution network.</p>
+        <p>Written in: Python, PuLP, Jupyter Notebook</p>
+        <p>Source Code: <a href="https://github.com/kerschdan/DistributionNetwork">GitHub</a></p>
     </div>
 
 </div>
