Added new project to the MyProjects section

--- a/index.html
+++ b/index.html
@@ -55,8 +55,16 @@
         <h1>MY PROJECTS<br><br></h1>
     </div>
 
+    <div class="project3">
+        <h4>Web Crawler</h4>
+        <h5>May 2021 - June 2021</h5>
+        <p>Web crawler for finding an undervalued property on behalf of a family member.</p>
+        <p>The program queries a real estate listing homepage for all apartments that fulfill certain criterias. From the results page, all URLs of the corresponding apartments are gathered. A request is sent for each URL and the relevant information is extracted from the page. Finally, all data is collected in a dataframe and exported to a .csv file.</p>
+        <p>Written in: Python, Selenium, BeautifulSoup</p>
+        <p>Source Code: <a href="https://github.com/kerschdan/HousingPriceCrawler" target="_blank">GitHub</a></p>
+    </div>
 
-    <div class="project1">
+    <div class="project2">
         <div class="content" id="content_thesis">
             <h4>Master's Thesis: Regression Models for Setting Vehicle Attributes</h4>
             <h5>Dec 2019 - Dec 2020</h5>
@@ -72,17 +80,15 @@
         <div>
             <span id="more" onclick="expandFunct()">+ more</span>
         </div>
-
     </div>
 
-
-    <div class="project2">
+    <div class="project1">
         <h4>Distribution Network</h4>
         <h5>Oct 2019 - Oct 2019</h5>
         <p>Extension of a problem from an university class.</p>
         <p>The optimization problem aims to find the minimum costs for sending products through a distribution network.</p>
-        <p>Written in: Python, PuLP, Jupyter Notebook</p>
-        <p>Source Code: <a href="https://github.com/kerschdan/DistributionNetwork">GitHub</a></p>
+        <p>Written in: Python, PuLP</p>
+        <p>Source Code: <a href="https://github.com/kerschdan/DistributionNetwork" target="_blank">GitHub</a></p>
     </div>
 
 </div>
@@ -90,11 +96,16 @@
 
 <!-- CONTACT -->
 <div class="contact" id="contact">
-    <h1>CONTACT</h1>
-    <p>If you are interested in a collaboration or simply want to have a chat, 
-        please reach out.
-    </p>
+    <div>
+        <h1>CONTACT<br><br></h1>
+    </div>
 
+    <div>
+        <p>If you are interested in a collaboration or simply want to have a chat, 
+            please reach out.
+        </p>
+    </div>
+    
     <div class="email">
         <p><img src="iconmonstr-email-2.svg">
             <span id="email">moc.liamg@refohhcsrek.d</span></p>
